--- a/Color Beluga/Color Beluga.csproj
+++ b/Color Beluga/Color Beluga.csproj
@@ -6,8 +6,8 @@
     <RootNamespace>Color_Beluga</RootNamespace>
     <Nullable>enable</Nullable>
     <UseWPF>true</UseWPF>
-    <ApplicationIcon>color-picker-icon.ico</ApplicationIcon>
-    <Version>1.0.0.0</Version>
+    <ApplicationIcon>color-beluga-logo2.ico</ApplicationIcon>
+    <Version>0.1.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="color-picker-icon.ico" />
+    <Content Include="color-beluga-logo2.ico" />
   </ItemGroup>
 
   <ItemGroup>
