--- a/Color Beluga/Color Beluga.csproj
+++ b/Color Beluga/Color Beluga.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Resource Include="DarkTheme.xaml" />
     <Resource Include="LightTheme.xaml" />
   </ItemGroup>
