--- a/Color Beluga/Color Beluga.csproj
+++ b/Color Beluga/Color Beluga.csproj
@@ -3,9 +3,10 @@
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
     <TargetFramework>net6.0-windows</TargetFramework>
+    <UseWPF>true</UseWPF>
+    <UseWindowsForms>true</UseWindowsForms>
     <RootNamespace>Color_Beluga</RootNamespace>
     <Nullable>enable</Nullable>
-    <UseWPF>true</UseWPF>
     <ApplicationIcon>color-beluga-logo2.ico</ApplicationIcon>
     <Version>0.1.0.0</Version>
   </PropertyGroup>
