--- a/Color Beluga/Color Beluga.csproj
+++ b/Color Beluga/Color Beluga.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <PackageReference Include="AForge.Imaging" Version="2.2.5" />
+    <PackageReference Include="ColorMine" Version="1.1.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Drawing.Common" Version="7.0.0" />
   </ItemGroup>
