Store image size and blur enable in settings

--- a/Color Beluga/App.config
+++ b/Color Beluga/App.config
@@ -2,17 +2,24 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Color_Beluga.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="Color_Picker_Unlimited.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
     <userSettings>
-        <Color_Picker_Unlimited.Settings>
+        <Color_Beluga.Settings>
             <setting name="Theme" serializeAs="String">
                 <value>Light</value>
             </setting>
             <setting name="RefreshRate" serializeAs="String">
                 <value>16.67</value>
             </setting>
-        </Color_Picker_Unlimited.Settings>
+            <setting name="ImageSize" serializeAs="String">
+                <value>64</value>
+            </setting>
+            <setting name="BlurEnabled" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </Color_Beluga.Settings>
     </userSettings>
 </configuration>
