--- a/Color Beluga/Color Beluga.csproj
+++ b/Color Beluga/Color Beluga.csproj
@@ -12,6 +12,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Resources\Simple-Names.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Include="color-beluga-logo2.ico" />
   </ItemGroup>
 
@@ -23,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Resources\colors.json">
+    <EmbeddedResource Include="Resources\Simple-Names.json" />
+    <EmbeddedResource Include="Resources\Standard.json">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </EmbeddedResource>
   </ItemGroup>
