Handle color set switching. Save setting

--- a/Color Beluga/App.config
+++ b/Color Beluga/App.config
@@ -20,6 +20,9 @@
             <setting name="BlurEnabled" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="ColorSet" serializeAs="String">
+                <value>Standard</value>
+            </setting>
         </Color_Beluga.Settings>
     </userSettings>
 </configuration>
