--- a/Color Beluga/Settings.settings
+++ b/Color Beluga/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="BlurEnabled" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="ColorSet" Type="System.String" Scope="User">
+      <Value Profile="(Default)">Standard</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
